--- a/roadmaps/2021.md
+++ b/roadmaps/2021.md
@@ -48,6 +48,7 @@ Nothing is definitive: the roadmap can be adapted depending on the need of the u
 - [ ] Geo search
 - [ ] NDJSON
 - [ ] CSV
+- [ ] Improve analytics
 - [ ] Clean API
   - [ ] Search
   - [ ] Documents
