--- a/roadmaps/2021.md
+++ b/roadmaps/2021.md
@@ -30,7 +30,12 @@ Nothing is definitive: the roadmap can be adapted depending on the need of the u
 - _Reported to Q3_ Release v0.21.0 of MeiliSearch
 
 ## Q3
+### Goals
 
+- Reduce biggest user's deal-breakers.
+- Start to stabilize the API format block by block until v1.0. 
+- Understand our user's behaviors.
+- Patch v0.21 indexing speed.
 ### Internal
 
 - [ ] Release v0.21.0
