--- a/roadmaps/2021.md
+++ b/roadmaps/2021.md
@@ -45,16 +45,24 @@ Nothing is definitive: the roadmap can be adapted depending on the need of the u
   - [ ] lmdb-rs
 - [ ] Cron job CI to run some SDKs tests
 - [ ] MeiliSearch (e.g. Transplant) documentation
-- [ ] Indexation benchmarks
+- [ ] Indexation benchmarks (Patch v0.21 indexing speed)
 
 ### New features
 
+#### Reduce biggest user's deal-breakers
 - [ ] SortBy
 - [ ] Geo search
-- [ ] NDJSON
-- [ ] CSV
-- [ ] Improve analytics
-- [ ] Clean API
+
+#### Patch v0.21 indexing speed
+- [ ] Indexing NDJSON file format
+- [ ] Indexing CSV file format
+- [ ] Indexer optimization
+
+#### Understand our user's behaviors.
+- [ ] Branch analytics at feature level (On those planned in this quarter)
+
+#### Stabilize the API format block by block until v1.0.
+- [ ] Clean API Format
   - [ ] Search
   - [ ] Documents
   - [ ] Updates
