--- a/roadmaps/2021.md
+++ b/roadmaps/2021.md
@@ -30,12 +30,14 @@ Nothing is definitive: the roadmap can be adapted depending on the need of the u
 - _Reported to Q3_ Release v0.21.0 of MeiliSearch
 
 ## Q3
+
 ### Goals
 
 - Reduce biggest user's deal-breakers.
 - Start to stabilize the API format block by block until v1.0. 
 - Understand our user's behaviors.
 - Patch v0.21 indexing speed.
+
 ### Internal
 
 - [ ] Release v0.21.0
@@ -45,23 +47,27 @@ Nothing is definitive: the roadmap can be adapted depending on the need of the u
   - [ ] lmdb-rs
 - [ ] Cron job CI to run some SDKs tests
 - [ ] MeiliSearch (e.g. Transplant) documentation
-- [ ] Indexation benchmarks (Patch v0.21 indexing speed)
+- [ ] Indexation benchmarks (patch v0.21 indexing speed)
 
 ### New features
 
 #### Reduce biggest user's deal-breakers
+
 - [ ] SortBy
 - [ ] Geo search
 
 #### Patch v0.21 indexing speed
+
 - [ ] Indexing NDJSON file format
 - [ ] Indexing CSV file format
 - [ ] Indexer optimization
 
 #### Understand our user's behaviors.
-- [ ] Branch analytics at feature level (On those planned in this quarter)
+
+- [ ] Branch analytics at feature level
 
 #### Stabilize the API format block by block until v1.0.
+
 - [ ] Clean API Format
   - [ ] Search
   - [ ] Documents
