--- a/roadmaps/2021.md
+++ b/roadmaps/2021.md
@@ -23,9 +23,53 @@ Nothing is definitive: the roadmap can be adapted depending on the need of the u
 
 ## Q2
 
-- [ ] Start some benchmarks
+- [X] Start some benchmarks
 - [X] Version the core-team repositories
-- [ ] Publish the core-team repositories to crates.io
-- [ ] Release the first RC of MeiliSearch v0.21.0 that integrates the new search engine (Transplant + Milli)
-- [ ] Release v0.21.0 of MeiliSearch
+- _Reported, waiting for internal decision_ Publish the core-team repositories to crates.io
+- [X] Release the first RC of MeiliSearch v0.21.0 that integrates the new search engine (Transplant + Milli)
+- _Reported to Q3_ Release v0.21.0 of MeiliSearch
 
+## Q3
+
+### Goals
+
+- Reduce biggest user's deal-breakers.
+- Start to stabilize the API format block by block until v1.0. 
+- Understand our user's behaviors.
+- Patch v0.21 indexing speed.
+
+### Internal
+
+- [ ] Release v0.21.0
+- [ ] Publish core-team repositories (depending on internal decisions)
+  - [ ] tokenizer
+  - [ ] milli
+  - [ ] lmdb-rs
+- [ ] Cron job CI to run some SDKs tests
+- [ ] MeiliSearch (e.g. Transplant) documentation
+- [ ] Indexation benchmarks (patch v0.21 indexing speed)
+
+### New features
+
+#### Reduce biggest user's deal-breakers
+
+- [ ] SortBy
+- [ ] Geo search
+
+#### Patch v0.21 indexing speed
+
+- [ ] Indexing NDJSON file format
+- [ ] Indexing CSV file format
+- [ ] Indexer optimization
+
+#### Understand our user's behaviors.
+
+- [ ] Branch analytics at feature level
+
+#### Stabilize the API format block by block until v1.0.
+
+- [ ] Clean API Format
+  - [ ] Search
+  - [ ] Documents
+  - [ ] Updates
+  - [ ] Indexes
