--- a/roadmaps/2021.md
+++ b/roadmaps/2021.md
@@ -34,42 +34,74 @@ Nothing is definitive: the roadmap can be adapted depending on the need of the u
 ### Goals
 
 - Reduce biggest user's deal-breakers.
-- Start to stabilize the API format block by block until v1.0. 
+- Start to stabilize the API format block by block until v1.0.
 - Understand our user's behaviors.
 - Patch v0.21 indexing speed.
 
 ### Internal
 
-- [ ] Release v0.21.0
-- [ ] Publish core-team repositories (depending on internal decisions)
+- [X] Release v0.21.0
+- (_Delayed to 2022. Wait for internal decision_) Publish core-team repositories (depending on internal decisions)
   - [ ] tokenizer
   - [ ] milli
   - [ ] lmdb-rs
-- [ ] Cron job CI to run some SDKs tests
-- [ ] MeiliSearch (e.g. Transplant) documentation
-- [ ] Indexation benchmarks (patch v0.21 indexing speed)
+- (_Delayed to Q4_) Cron job CI to run some SDKs tests
+- [X] MeiliSearch (e.g. Transplant) documentation
+- [X] Indexation benchmarks (patch v0.21 indexing speed)
 
 ### New features
 
 #### Reduce biggest user's deal-breakers
 
-- [ ] SortBy
-- [ ] Geo search
+- [X] SortBy
+- [X] Geo search
 
 #### Patch v0.21 indexing speed
 
-- [ ] Indexing NDJSON file format
-- [ ] Indexing CSV file format
-- [ ] Indexer optimization
+- [X] Indexing NDJSON file format
+- [X] Indexing CSV file format
+- [X] Indexer optimization
 
 #### Understand our user's behaviors.
 
-- [ ] Branch analytics at feature level
+- (_Delayed to Q4_) Branch analytics at feature level
 
 #### Stabilize the API format block by block until v1.0.
 
-- [ ] Clean API Format
+- (_Delayed to 2022. Needs more organization_) Clean API Format
   - [ ] Search
   - [ ] Documents
   - [ ] Updates
   - [ ] Indexes
+
+## Q4
+
+### Goals
+
+Be production ready by integrating missing features: multi-tenancy and HA.
+
+### New features
+
+- [ ] HA first version [product/#49](https://github.com/meilisearch/product/issues/49)
+- [ ] Multi-tenancy [product/#51](https://github.com/meilisearch/product/issues/51)
+- [ ] Refashion updates/task [product/#48](https://github.com/meilisearch/product/issues/48)
+  - [ ] Rename update → task
+  - [ ] Add new routes (global task routes)
+  - [ ] Reformat the HTTP responses
+  - [ ] Bonus: cursor for pagination [product/#190](https://github.com/meilisearch/product/issues/190)
+- [ ] Asynchronous index behavior: delete, create and update index are asynchronous [product/#203](https://github.com/meilisearch/product/issues/203)
+- [ ] Auto batching of tasks [product/#69](https://github.com/meilisearch/product/issues/69)
+- [ ] Analytics: centralize them in one single DB (Segment by Twilio) [product/#183](https://github.com/meilisearch/product/issues/183)
+- [ ] Error definition [specifications/#61](https://github.com/meilisearch/specifications/pull/61)
+- [ ] Limit number of positions [product/#202](https://github.com/meilisearch/product/issues/202)
+
+### Maintenance
+
+- [ ] Improve test for errors
+- [ ] Publish a nightly image of MeiliSearch
+- [ ] Cron test running the test suite of SDKs
+- [ ] Docker image for ARM
+
+### R&D (?)
+
+- [ ] Start POC about segment for "Search on the Edge" project
