Update roadmap according to the review

--- a/roadmaps/2022.md
+++ b/roadmaps/2022.md
@@ -26,7 +26,7 @@ We want to increase the participation regarding fixes (quick or not), technical 
 
 Since we want to focus on more technical tasks, the core team needs to hire experts and senior people.
 
-We plan to start an internship program too. The goal is to make Meilisearch more visible but also to attract young developers by making them discover open-source and fall in love with Rust.
+We also plan to hire an intern to make them discover open-source and fall in love with Rust. This will make Meilisearch more visible but also attract young developers. Our final plan would be to start a kind of internship program in the future if we have the possibility regarding the HR team.
 
 ### More R&D phases 🔍
 
@@ -46,15 +46,16 @@ Since Meilisearch is famous for attracting professional developers, developing a
 
 To release a complete feature, we need to be coordinate with all the team to ensure the best search experience. This would involve more and more synchronization and work between the teams.
 
-### Release the game-changer features 🛠
+### Improve the search engine experience 🛠
 
 Regarding this point, more details are available on the product team roadmap, but here are the main goals:
 - Tenant tokens
 - Nested fields
 - Federated search
-- Improve the indexation speed
 - Enhance some customization
+- Improve the indexation speed
 - Improve the tokenizer
+- Stabalize the API routes, essential for the Cloud team
 
 ## Q1 2022
 
