--- a/roadmaps/2022.md
+++ b/roadmaps/2022.md
@@ -55,7 +55,7 @@ Regarding this point, more details are available on the product team roadmap, bu
 - Enhance some customization
 - Improve the indexation speed
 - Improve the tokenizer
-- Stabalize the API routes, essential for the Cloud team
+- Stabilize the API routes, essential for the Cloud team
 
 ## Q1 2022
 
