Add tokenizer in roadmap Q2

--- a/roadmaps/2022.md
+++ b/roadmaps/2022.md
@@ -75,5 +75,8 @@ Regarding this point, more details are available on the product team roadmap, bu
 - [ ] Keep being more and more transparent regarding the pre-release tasks each developer makes: write down regularly on GitHub the context, the hypotheses, the results & conclusions, the graphs, the metrics...
 - [ ] Keep improving the indexation speed: work with constraints, add benchmarks to prove the change is valuable...
 - [ ] v0.28.0: stabilize the API routes. v0.28.0 will be released at the beginning of Q3 but the specs and the whole sprint is during Q2.
+- [ ] Keep working on the tokenizer
+  - [ ] Clarify the organization regarding the issue management
+  - [ ] Make it more contribuable in order to let the community add their language support easily
 - [ ] Autobatching feature: stabilize it, or at least start to work on the stabilization.
 - [ ] Automate our release process by deploying releasemops 🤖
