--- a/roadmaps/2022.md
+++ b/roadmaps/2022.md
@@ -59,9 +59,24 @@ Regarding this point, more details are available on the product team roadmap, bu
 
 ## Q1 2022
 
-- [ ] Change the Meilisearch release rhythm and adapt the team to it. 4 weeks of implementation / 4 weeks of pre-release.
-- [ ] Do the first pre-release tasks, i.e., discovery/R&D/maintainance tasks between 2 sprints.
-- [ ] Start the first R&D regarding indexation speed improvement.
-- [ ] Implement, or at least, start working on the required features by the product team (nested fields, federated search)
-- [ ] Start the recruitment process to hire an expert to help us with the technical parts.
-- [ ] Start the recruitment process to hire an intern.
+- [X] Change the Meilisearch release rhythm and adapt the team to it. 4 weeks of implementation / 4 weeks of pre-release.
+- [X] Do the first pre-release tasks, i.e., discovery/R&D/maintainance tasks between 2 sprints.
+- [X] Start the first R&D regarding indexation speed improvement.
+- [X] Start improvement tasks regarding the tokenizer: make the tokenizer more contribuable in order to let the community add their language support easily.
+- [X] Implement, or at least, start working on the required features by the product team (nested fields, tenant tokens <s>federated search</s>)
+- [X] Start the recruitment process to hire an intern.
+- [X] Release our first experimental feature: auto-batching.
+- [ ] *Delayed to prioratize the Cloud team recruitments* - Start the recruitment process to hire an expert to help us with the technical parts.
+
+## Q2 2022
+
+- [ ] Finish the recruitment process to hire an intern. Depending on the intern, the onboarding will be in Q2 or later.
+- [ ] Release v0.27.0 including indexation speed improvements, the nested field support, the typo tolerance customization, the stabilization/improvement of the cropping & highlighting.
+- [ ] Keep being more and more transparent regarding the pre-release tasks each developer makes: write down regularly on GitHub the context, the hypotheses, the results & conclusions, the graphs, the metrics...
+- [ ] Keep improving the indexation speed: work with constraints, add benchmarks to prove the change is valuable...
+- [ ] v0.28.0: stabilize the API routes. v0.28.0 will be released at the beginning of Q3 but the specs and the whole sprint is during Q2.
+- [ ] Keep working on the tokenizer
+  - [ ] Clarify the organization regarding the issue management
+  - [ ] Make it more contribuable in order to let the community add their language support easily
+- [ ] Autobatching feature: stabilize it, or at least start to work on the stabilization.
+- [ ] Automate our release process by deploying releasemops 🤖
