--- a/meilisearch-release-changelogs/v0.28.0.md
+++ b/meilisearch-release-changelogs/v0.28.0.md
@@ -70,7 +70,7 @@ Done by @irevoire and @Kerollmops in #2423, #2452, and #2454.
 
 - When getting the documents via the `GET /indexes/{uid}/documents` route, the pagination has been improved. It means:
   - You can still use the `offset` and `limit` parameters to browse the indexes.
-  - The documents are returned in the `result` field in the response body.
+  - The documents are returned in the `results` field in the response body.
   - The `limit`, `offset`, and `total` are also now available in the response body.
 - When getting the documents via the `GET /indexes/{uid}/documents` route, the `attributesToRetrieve` parameter has been renamed into `fields`
 - The `fields` parameter is available for the `GET /indexes/{uid}/documents/{document_uid}` route.
