--- a/meilisearch-release-changelogs/v0.28.0.md
+++ b/meilisearch-release-changelogs/v0.28.0.md
@@ -85,7 +85,7 @@ Done by @irevoire in #2372, #2433, and #2454.
   - It is possible to specify several values for a filter using the `,` character. e.g. `?status=enqueued,processing`
   - Between two different filters, an `AND` operation is applied. e.g. `?status=enqueued&type=indexCreation` is equivalent to `status=enqueued AND type = indexCreation`
 - Add keyset pagination on the `GET /tasks` endpoints, allowing users to browse multiple sets of `task` items.
-  - You can use the `limit`, `from`, `next` query parameters to browse the tasks.
+  - You can use the `limit`, `from` query parameters to browse the tasks.
   - The tasks are still returned in the `result` field in the response body.
   - The `limit`, `from`, and `next` are available in the response body.
 - Remove `GET /indexes/:indexUid/tasks` is removed. It can be replaced by `GET /tasks?indexUid=:indexUid`
