--- a/meilisearch-release-changelogs/v0.28.0.md
+++ b/meilisearch-release-changelogs/v0.28.0.md
@@ -51,7 +51,7 @@ For most of the following changes, if you use [one of our SDKs](https://docs.mei
 - The `facetsDistribution` field in the response body (received when calling the [`GET/POST /indexes/{uid}/search` route](https://docs.meilisearch.com/reference/api/search.html)) is renamed into `facetDistribution`
 - The `matches` search parameter (used when calling the [`GET/POST /indexes/{uid}/search` route](https://docs.meilisearch.com/reference/api/search.html)) is renamed `showMatchesPosition`
 - The `_matchesInfo` field in the response body (received when calling the [`GET/POST /indexes/{uid}/search` route](https://docs.meilisearch.com/reference/api/search.html)) is renamed into `_matchesPosition`
-- `exhaustiveNbHits` and `exhaustiveFacetsCount` are removed because not used.
+- `exhaustiveNbHits` and `exhaustiveFacetsCount` are removed because their values never change thus making them inoperable.
 
 Done by @irevoire in #2406.
 
