Update following reviews

--- a/meilisearch-release-changelogs/v0.28.0.md
+++ b/meilisearch-release-changelogs/v0.28.0.md
@@ -98,7 +98,7 @@ Done by @irevoire in #2372, #2433, and #2454.
 
 Done by Kerollmops in #2399 and #2445.
 
-### Make the dump creation an asynchronous `task`
+### Changes regarding the dumps
 
 - Dump creation becomes an asynchronous task. It means the dump task is put at the end of the task queue but will be processed in priority.
 - `POST /dumps` now returns `202` like any other asynchronous operation (e.g. index creation, document addition...
@@ -116,6 +116,7 @@ Done by @MarinPostma in #2410
   - The keys are still returned in the `result` field in the response body.
   - The `limit`, `offset`, and `total` are available in the response body.
 - Due to all the changes on the `keys` resources, the dump's compatibility is not full with API keys. It means the keys created with an old version of Meilisearch will be imported with the same `actions` and `indexes` values, but the `key` and `uid` fields will be regenerated. You will need to update your keys.
+- The `dumps.get` action is removed.
 
 Done by @ManyTheFish in #2438, #2451, #2475, and #2474)
 
