--- a/meilisearch-release-changelogs/v0.28.0.md
+++ b/meilisearch-release-changelogs/v0.28.0.md
@@ -1,7 +1,8 @@
 # v0.28.0 release changelogs
 
 The main goal of this new release is to stabilize the Meilisearch API 🚀
-This introduces a lot of breaking changes (especially regarding the naming), and we are sorry for this. The purpose is to guarantee what we care about the most: provide the best search engine experience by stabilizing the Meilisearch API at the same time. So, it means the Meilisearch API will not break in the future.
+
+This release introduces a lot of breaking changes (especially regarding names), and we are sorry for this. The purpose is to guarantee what we care about the most—providing the best search engine experience—by stabilizing the Meilisearch API. There should not be any breaking changes to the API in the future.
 
 <!-- The following line should NOT be put in the official release changelogs -->
 ⚠️ Since this is a release candidate (RC), the official documentation is not updated yet, but will be ready for the official v0.28.0 release. The work-in-progress documentation is available [here]().
