--- a/meilisearch-release-changelogs/v0.28.0.md
+++ b/meilisearch-release-changelogs/v0.28.0.md
@@ -7,7 +7,7 @@ This release introduces a lot of breaking changes (especially regarding names), 
 <!-- The following line should NOT be put in the official release changelogs -->
 ⚠️ Since this is a release candidate (RC), the official documentation is not updated yet, but will be ready for the official v0.28.0 release. The work-in-progress documentation is available [here]().
 
-# New features 🚀
+## New features 🚀
 
 ### Smart crop
 
