--- a/meilisearch-release-changelogs/v0.28.0.md
+++ b/meilisearch-release-changelogs/v0.28.0.md
@@ -13,7 +13,7 @@ This release introduces a lot of breaking changes (especially regarding names), 
 
 The smart crop is an improvement of the Meilisearch crop.
 
-The cropping algorithm tries to match the window with the highest density of query terms within the `cropLength` limit. Then it picks the window that contains the more ordered query terms.
+The cropping algorithm tries to find the window(s) with the highest density of query terms within the `cropLength` limit. From these, it picks the window that contains the most query terms in order.
 
 Done by @ManyTheFish (#2408)
 
