--- a/meilisearch-release-changelogs/v0.28.0.md
+++ b/meilisearch-release-changelogs/v0.28.0.md
@@ -20,7 +20,7 @@ Done by @ManyTheFish (#2408)
 ### API key management improvements
 
 - It is now possible to create a deterministic `key` value by specifying a `uid` field at creation. `uid` is a `uuidv4`. If omitted, Meilisearch generates it.
-- Adds a `name` field to give a human-readable name to ease API key retrieval in a list at the convenience of the user.
+- Adds a `name` field: specify a human-readable `name` to make API key retrieval more convenient.
 - Introduce new actions to manage API Keys (`keys.get`, `keys.create`, `keys.update`, `keys.delete`).
 
 Done by @ManyTheFish in #2438, #2451, #2475, and #2474)
