--- a/meilisearch-release-changelogs/v0.28.0.md
+++ b/meilisearch-release-changelogs/v0.28.0.md
@@ -17,7 +17,7 @@ The cropping algorithm tries to find the window(s) with the highest density of q
 
 Done by @ManyTheFish (#2408)
 
-### API key management improvements
+### API key management: deterministic keys
 
 - It is now possible to create a deterministic `key` value by specifying a `uid` field at creation. `uid` is a `uuidv4`. If omitted, Meilisearch generates it.
 - Adds a `name` field: specify a human-readable `name` to make API key retrieval more convenient.
