--- a/meilisearch-release-changelogs/v0.28.0.md
+++ b/meilisearch-release-changelogs/v0.28.0.md
@@ -21,7 +21,8 @@ Done by @ManyTheFish (#2408)
 
 - It is now possible to create a deterministic `key` value by specifying a `uid` field at creation. `uid` is a `uuidv4`. If omitted, Meilisearch generates it.
 - Adds a `name` field: specify a human-readable `name` to make API key retrieval more convenient.
-- Introduce new actions to manage API Keys (`keys.get`, `keys.create`, `keys.update`, `keys.delete`).
+- Introduces new actions to manage API keys (`keys.get`, `keys.create`, `keys.update`, `keys.delete`).
+- It is no longer possible to update an API key's `actions`, `indexes`, or `expiresAt` after creation.
 
 Done by @ManyTheFish in #2438, #2451, #2475, and #2474)
 
