--- a/meilisearch-release-changelogs/v0.28.0.md
+++ b/meilisearch-release-changelogs/v0.28.0.md
@@ -32,7 +32,7 @@ New language support: Hebrew, using the [Niqqud library](https://github.com/benn
 
 Done by the amazing @benny-n in meilisearch/charabia#101.
 
-### Integrate the new tokenizer: add your language to Meilisearch!
+### New tokenizer contribution experience: add your language to Meilisearch
 
 The contribution experience in the tokenizer has been significantly improved.
 As for the Hebrew support language that has just been added, if your language is missing in Meilisearch please consider contributing to [the Meilisearch tokenizer](https://github.com/meilisearch/charabia) by following the CONTRIBUTING.md file by integrating your expected normalizer/segmenter.
