--- a/meilisearch-release-changelogs/v0.28.0.md
+++ b/meilisearch-release-changelogs/v0.28.0.md
@@ -35,9 +35,10 @@ Done by the amazing @benny-n in meilisearch/charabia#101.
 ### New tokenizer contribution experience: add your language to Meilisearch
 
 The contribution experience in the tokenizer has been significantly improved.
-As for the Hebrew support language that has just been added, if your language is missing in Meilisearch please consider contributing to [the Meilisearch tokenizer](https://github.com/meilisearch/charabia) by following the CONTRIBUTING.md file by integrating your expected normalizer/segmenter.
 
-The whole core team is available to help you contribute. Feel free to ask any questions or clarifications you need!
+If your language is missing in Meilisearch, please consider contributing to [the Meilisearch tokenizer](https://github.com/meilisearch/charabia) by following the CONTRIBUTING.md file and integrating your intended normalizer/segmenter.
+
+The whole core team is available to help you contribute. Feel free to ask for any clarifications you need!
 
 Done by @ManyTheFish, @loiclec @gmourier, and @curquiza.
 
