--- a/meilisearch-release-changelogs/v0.28.0.md
+++ b/meilisearch-release-changelogs/v0.28.0.md
@@ -26,7 +26,7 @@ Done by @ManyTheFish (#2408)
 
 Done by @ManyTheFish in #2438, #2451, #2475, and #2474)
 
-### Add the Hebrew language support
+### Hebrew language support
 
 New language support: Hebrew, using the [Niqqud library](https://github.com/benny-n/niqqud).
 
