--- a/meilisearch-release-changelogs/v0.28.0.md
+++ b/meilisearch-release-changelogs/v0.28.0.md
@@ -49,7 +49,7 @@ For most of the following changes, if you use [one of our SDKs](https://docs.mei
 
 ### Changes in `/indexes/{uid}/search` endpoint
 
-- `nbHits` is renamed `estimatedNbhits`. Indeed some users were confused by the name and use it for their pagination, but should not. Please check out this [fresh new guide]() to know how to paginate with Meilisearch without using `nbHits`.
+- `nbHits` is renamed `estimatedNbHits`. Some users were confused by the old name and used it for their pagination, which we discourage. Please check out this [fresh new guide]() to learn how to paginate with Meilisearch without using `nbHits`.
 - The `facetsDistribution` search parameter (used when calling the [`GET/POST /search` route](https://docs.meilisearch.com/reference/api/search.html)) is renamed `facets`
 - The `facetsDistribution` field in the response body (received when calling the [`GET/POST /indexes/{uid}/search` route](https://docs.meilisearch.com/reference/api/search.html)) is renamed into `facetDistribution`
 - The `matches` search parameter (used when calling the [`GET/POST /indexes/{uid}/search` route](https://docs.meilisearch.com/reference/api/search.html)) is renamed `showMatchesPosition`
