--- a/meilisearch-release-changelogs/v0.28.0.md
+++ b/meilisearch-release-changelogs/v0.28.0.md
@@ -51,7 +51,7 @@ For most of the following changes, if you use [one of our SDKs](https://docs.mei
 
 - `nbHits` is renamed `estimatedNbHits`. Some users were confused by the old name and used it for their pagination, which we discourage. Please check out this [fresh new guide]() to learn how to paginate with Meilisearch without using `nbHits`.
 - The `facetsDistribution` search parameter is renamed `facets`
-- The `facetsDistribution` field in the response body (received when calling the [`GET/POST /indexes/{uid}/search` route](https://docs.meilisearch.com/reference/api/search.html)) is renamed into `facetDistribution`
+- The `facetsDistribution` field in the response body is renamed `facetDistribution`
 - The `matches` search parameter (used when calling the [`GET/POST /indexes/{uid}/search` route](https://docs.meilisearch.com/reference/api/search.html)) is renamed `showMatchesPosition`
 - The `_matchesInfo` field in the response body (received when calling the [`GET/POST /indexes/{uid}/search` route](https://docs.meilisearch.com/reference/api/search.html)) is renamed into `_matchesPosition`
 - `exhaustiveNbHits` and `exhaustiveFacetsCount` are removed because their values never change thus making them inoperable.
