--- a/meilisearch-release-changelogs/v0.28.0.md
+++ b/meilisearch-release-changelogs/v0.28.0.md
@@ -54,7 +54,7 @@ For most of the following changes, if you use [one of our SDKs](https://docs.mei
 - The `facetsDistribution` field in the response body is renamed `facetDistribution`
 - The `matches` search parameter is renamed `showMatchesPosition`
 - The `_matchesInfo` field in the response body is renamed `_matchesPosition`
-- `exhaustiveNbHits` and `exhaustiveFacetsCount` are removed because their values never change thus making them inoperable.
+- `exhaustiveNbHits` and `exhaustiveFacetsCount` are removed. Meilisearch does not return exhaustive hit or facet counts at this time.
 
 Done by @irevoire in #2406.
 
