--- a/meilisearch-release-changelogs/v0.28.0.md
+++ b/meilisearch-release-changelogs/v0.28.0.md
@@ -60,7 +60,7 @@ Done by @irevoire in #2406.
 
 ### Changes in `/indexes` endpoints
 
-- When getting the index list, the indexes are now paginated. It means:
+- When getting the index list (`GET /indexes`), the response is now paginated. That means:
   - You can use the `offset` and `limit` parameters to browse the indexes.
   - The indexes are returned in the `results` field in the response body.
   - The `limit`, `offset`, and `total` are also now available in the response body.
