--- a/meilisearch-release-changelogs/v0.28.0.md
+++ b/meilisearch-release-changelogs/v0.28.0.md
@@ -65,7 +65,7 @@ Done by @irevoire in #2406.
   - The indexes are returned in the `results` field in the response body.
   - `limit`, `offset`, and `total` now appear in the response body.
 - The endpoint to update an index is now `PATCH /indexes/{indexUid}` instead of `PUT`
-- The already deprecated `name` field returned in the response body is totally removed.
+- The already deprecated `name` field has now been removed entirely.
 
 Done by @irevoire and @Kerollmops in #2423, #2452, and #2454.
 
