--- a/meilisearch-release-changelogs/v0.28.0.md
+++ b/meilisearch-release-changelogs/v0.28.0.md
@@ -71,7 +71,7 @@ Done by @irevoire and @Kerollmops in #2423, #2452, and #2454.
 
 ### Changes in `indexes/{uid}/documents` endpoints
 
-- When getting the documents via the `GET /indexes/{uid}/documents` route, the pagination has been improved. It means:
+- When getting the documents list (`GET /indexes/{uid}/documents`), pagination has been improved. That means:
   - You can still use the `offset` and `limit` parameters to browse the indexes.
   - The documents are returned in the `results` field in the response body.
   - The `limit`, `offset`, and `total` are also now available in the response body.
