--- a/meilisearch-release-changelogs/v0.28.0.md
+++ b/meilisearch-release-changelogs/v0.28.0.md
@@ -74,7 +74,7 @@ Done by @irevoire and @Kerollmops in #2423, #2452, and #2454.
 - When getting the documents list (`GET /indexes/{uid}/documents`), pagination has been improved. That means:
   - You can still use the `offset` and `limit` parameters to browse documents.
   - The documents are returned in the `results` field in the response body.
-  - The `limit`, `offset`, and `total` are also now available in the response body.
+  - `limit`, `offset`, and `total` now appear in the response body.
 - When getting the documents via the `GET /indexes/{uid}/documents` route, the `attributesToRetrieve` parameter has been renamed into `fields`
 - The `fields` parameter is available for the `GET /indexes/{uid}/documents/{document_uid}` route.
 - The [`displayedAttributes` settings](https://docs.meilisearch.com/reference/api/displayed_attributes.html) does not impact the `indexes/{uid}/documents` anymore, but ony the `/indexes/{uid}/search` endpoints.
