--- a/meilisearch-release-changelogs/v0.28.0.md
+++ b/meilisearch-release-changelogs/v0.28.0.md
@@ -76,7 +76,7 @@ Done by @irevoire and @Kerollmops in #2423, #2452, and #2454.
   - The documents are returned in the `results` field in the response body.
   - `limit`, `offset`, and `total` now appear in the response body.
 - When getting the documents via the `GET /indexes/{uid}/documents` route, the `attributesToRetrieve` parameter has been renamed into `fields`
-- The `fields` parameter is available for the `GET /indexes/{uid}/documents/{document_uid}` route.
+- The `fields` parameter is also available for the `GET /indexes/{uid}/documents/{document_uid}` endpoint.
 - The [`displayedAttributes` settings](https://docs.meilisearch.com/reference/api/displayed_attributes.html) does not impact the `indexes/{uid}/documents` anymore, but ony the `/indexes/{uid}/search` endpoints.
 
 Done by @irevoire in #2372, #2433, and #2454.
