--- a/meilisearch-release-changelogs/v0.28.0.md
+++ b/meilisearch-release-changelogs/v0.28.0.md
@@ -77,7 +77,7 @@ Done by @irevoire and @Kerollmops in #2423, #2452, and #2454.
   - `limit`, `offset`, and `total` now appear in the response body.
 - When getting the documents via the `GET /indexes/{uid}/documents` route, the `attributesToRetrieve` parameter has been renamed into `fields`
 - The `fields` parameter is also available for the `GET /indexes/{uid}/documents/{document_uid}` endpoint.
-- The [`displayedAttributes` settings](https://docs.meilisearch.com/reference/api/displayed_attributes.html) does not impact the `indexes/{uid}/documents` anymore, but ony the `/indexes/{uid}/search` endpoints.
+- The [`displayedAttributes` setting](https://docs.meilisearch.com/reference/api/displayed_attributes.html) does not impact `GET indexes/{uid}/documents` anymore.
 
 Done by @irevoire in #2372, #2433, and #2454.
 
