--- a/meilisearch-release-changelogs/v0.28.0.md
+++ b/meilisearch-release-changelogs/v0.28.0.md
@@ -75,7 +75,7 @@ Done by @irevoire and @Kerollmops in #2423, #2452, and #2454.
   - You can still use the `offset` and `limit` parameters to browse documents.
   - The documents are returned in the `results` field in the response body.
   - `limit`, `offset`, and `total` now appear in the response body.
-- When getting the documents via the `GET /indexes/{uid}/documents` route, the `attributesToRetrieve` parameter has been renamed into `fields`
+- When getting documents via the `GET /indexes/{uid}/documents` route, the `attributesToRetrieve` parameter has been renamed `fields`
 - The `fields` parameter is also available for the `GET /indexes/{uid}/documents/{document_uid}` endpoint.
 - The [`displayedAttributes` setting](https://docs.meilisearch.com/reference/api/displayed_attributes.html) does not impact `GET indexes/{uid}/documents` anymore.
 
