--- a/meilisearch-release-changelogs/v0.28.0.md
+++ b/meilisearch-release-changelogs/v0.28.0.md
@@ -83,7 +83,7 @@ Done by @irevoire in #2372, #2433, and #2454.
 
 ### Changes in `/tasks` and `/indexes/{uid}/tasks` endpoints
 
-- Add filtering on the `GET /tasks` endpoint:
+- You can now filter on the `GET /tasks` endpoint:
   - Add filtering capabilities on `type`, `status` and `indexUid` for `GET` `task` lists endpoints.
   - It is possible to specify several values for a filter using the `,` character. e.g. `?status=enqueued,processing`
   - Between two different filters, an `AND` operation is applied. e.g. `?status=enqueued&type=indexCreation` is equivalent to `status=enqueued AND type = indexCreation`
