--- a/meilisearch-release-changelogs/v0.28.0.md
+++ b/meilisearch-release-changelogs/v0.28.0.md
@@ -84,7 +84,7 @@ Done by @irevoire in #2372, #2433, and #2454.
 ### Changes in `/tasks` and `/indexes/{uid}/tasks` endpoints
 
 - You can now filter on the `GET /tasks` endpoint:
-  - Add filtering capabilities on `type`, `status` and `indexUid` for `GET` `task` lists endpoints.
+  - Filtering is possible on the `type`, `status`, and `indexUid` fields.
   - It is possible to specify several values for a filter using the `,` character. e.g. `?status=enqueued,processing`
   - Between two different filters, an `AND` operation is applied. e.g. `?status=enqueued&type=indexCreation` is equivalent to `status=enqueued AND type = indexCreation`
 - Add keyset pagination on the `GET /tasks` endpoints, allowing users to browse multiple sets of `task` items.
