--- a/meilisearch-release-changelogs/v0.28.0.md
+++ b/meilisearch-release-changelogs/v0.28.0.md
@@ -85,7 +85,7 @@ Done by @irevoire in #2372, #2433, and #2454.
 
 - You can now filter on the `GET /tasks` endpoint:
   - Filtering is possible on the `type`, `status`, and `indexUid` fields.
-  - It is possible to specify several values for a filter using the `,` character. e.g. `?status=enqueued,processing`
+  - Use the `,` character to specify several values for a filter, e.g. `?status=enqueued,processing`. This is equivalent to an `OR` operation.
   - Between two different filters, an `AND` operation is applied. e.g. `?status=enqueued&type=indexCreation` is equivalent to `status=enqueued AND type = indexCreation`
 - Add keyset pagination on the `GET /tasks` endpoints, allowing users to browse multiple sets of `task` items.
   - You can use the `limit`, `from` query parameters to browse the tasks.
