--- a/meilisearch-release-changelogs/v0.28.0.md
+++ b/meilisearch-release-changelogs/v0.28.0.md
@@ -86,7 +86,7 @@ Done by @irevoire in #2372, #2433, and #2454.
 - You can now filter on the `GET /tasks` endpoint:
   - Filtering is possible on the `type`, `status`, and `indexUid` fields.
   - Use the `,` character to specify several values for a filter, e.g. `?status=enqueued,processing`. This is equivalent to an `OR` operation.
-  - Between two different filters, an `AND` operation is applied. e.g. `?status=enqueued&type=indexCreation` is equivalent to `status=enqueued AND type = indexCreation`
+  - Use the `&` character to apply multiple filters, e.g. `?status=enqueued&type=indexCreation`. This is equivalent to an `AND` operation.
 - Add keyset pagination on the `GET /tasks` endpoints, allowing users to browse multiple sets of `task` items.
   - You can use the `limit`, `from` query parameters to browse the tasks.
   - The tasks are still returned in the `result` field in the response body.
