--- a/meilisearch-release-changelogs/v0.28.0.md
+++ b/meilisearch-release-changelogs/v0.28.0.md
@@ -89,7 +89,7 @@ Done by @irevoire in #2372, #2433, and #2454.
   - Use the `&` character to apply multiple filters, e.g. `?status=enqueued&type=indexCreation`. This is equivalent to an `AND` operation.
 - Add keyset pagination on the `GET /tasks` endpoints, allowing users to browse multiple sets of `task` items.
   - You can use the `limit`, `from` query parameters to browse the tasks.
-  - The `limit`, `from`, and `next` are available in the response body.
+  - `limit`, `from`, and `next` now appear in the response body.
 - `GET /indexes/:indexUid/tasks` has been removed. It can be replaced by `GET /tasks?indexUid=:indexUid`
 - `GET /indexes/:indexUid/tasks/:taskUid` has been removed.
 - Rename `uid` to `taskUid` in the response body returned by every asynchronous task (ex: index creation, document addition...)
