--- a/meilisearch-release-changelogs/v0.28.0.md
+++ b/meilisearch-release-changelogs/v0.28.0.md
@@ -88,7 +88,7 @@ Done by @irevoire in #2372, #2433, and #2454.
   - Use the `,` character to specify several values for a filter, e.g. `?status=enqueued,processing`. This is equivalent to an `OR` operation.
   - Use the `&` character to apply multiple filters, e.g. `?status=enqueued&type=indexCreation`. This is equivalent to an `AND` operation.
 - Add keyset pagination on the `GET /tasks` endpoint, allowing users to browse multiple sets of `task` items.
-  - You can use the `limit`, `from` query parameters to browse the tasks.
+  - Use the `limit` and `from` query parameters to browse tasks.
   - `limit`, `from`, and `next` now appear in the response body.
 - `GET /indexes/:indexUid/tasks` has been removed. It can be replaced by `GET /tasks?indexUid=:indexUid`
 - `GET /indexes/:indexUid/tasks/:taskUid` has been removed.
