--- a/meilisearch-release-changelogs/v0.28.0.md
+++ b/meilisearch-release-changelogs/v0.28.0.md
@@ -92,7 +92,7 @@ Done by @irevoire in #2372, #2433, and #2454.
   - `limit`, `from`, and `next` now appear in the response body.
 - `GET /indexes/:indexUid/tasks` has been removed. It can be replaced by `GET /tasks?indexUid=:indexUid`
 - `GET /indexes/:indexUid/tasks/:taskUid` has been removed.
-- Rename `uid` to `taskUid` in the response body returned by every asynchronous task (ex: index creation, document addition...)
+- `uid` has been renamed `taskUid` in the response body returned by every asynchronous task (e.g. index creation, document addition, etc...)
 - Rename some task properties
   - `documentPartial`-> `documentAdditionOrUpdate`
   - `documentAddition`-> `documentAdditionOrUpdate`
