--- a/meilisearch-release-changelogs/v0.28.0.md
+++ b/meilisearch-release-changelogs/v0.28.0.md
@@ -93,7 +93,7 @@ Done by @irevoire in #2372, #2433, and #2454.
 - `GET /indexes/:indexUid/tasks` has been removed. It can be replaced by `GET /tasks?indexUid=:indexUid`
 - `GET /indexes/:indexUid/tasks/:taskUid` has been removed.
 - `uid` has been renamed `taskUid` in the response body returned by every asynchronous task (e.g. index creation, document addition, etc...)
-- Rename some task properties
+- Some task properties have been renamed
   - `documentPartial`-> `documentAdditionOrUpdate`
   - `documentAddition`-> `documentAdditionOrUpdate`
   - `clearAll` -> `documentDeletion`
