--- a/meilisearch-release-changelogs/v0.28.0.md
+++ b/meilisearch-release-changelogs/v0.28.0.md
@@ -100,7 +100,7 @@ Done by @irevoire in #2372, #2433, and #2454.
 
 Done by Kerollmops in #2399 and #2445.
 
-### Changes regarding the dumps
+### Changes regarding dumps
 
 - Dump creation becomes an asynchronous task. It means the dump task is put at the end of the task queue but will be processed in priority.
 - `POST /dumps` now returns `202` like any other asynchronous operation (e.g. index creation, document addition...
