--- a/meilisearch-release-changelogs/v0.28.0.md
+++ b/meilisearch-release-changelogs/v0.28.0.md
@@ -102,7 +102,7 @@ Done by Kerollmops in #2399 and #2445.
 
 ### Changes regarding dumps
 
-- Dump creation becomes an asynchronous task. It means the dump task is put at the end of the task queue but will be processed in priority.
+- Dump creation is now an asynchronous task. Dump tasks are placed at the end of the task queue but are processed in priority.
 - `POST /dumps` now returns `202` like any other asynchronous operation (e.g. index creation, document addition...
 - The `GET /dumps/:dump_uid/status` route is removed because not useful anymore, use `GET /tasks` instead.
 - Remove the `dump_already_processing` error when a dump is already processed since they can now be enqueued.
