--- a/meilisearch-release-changelogs/v0.28.0.md
+++ b/meilisearch-release-changelogs/v0.28.0.md
@@ -105,7 +105,7 @@ Done by Kerollmops in #2399 and #2445.
 - Dump creation is now an asynchronous task. Dump tasks are placed at the end of the task queue but are processed in priority.
 - `POST /dumps` now returns `202` like any other asynchronous operation (e.g. index creation, document addition...
 - The `GET /dumps/:dump_uid/status` endpoint has been removed. It can be replaced by `GET /tasks?type=dump`.
-- Remove the `dump_already_processing` error when a dump is already processed since they can now be enqueued.
+- The `dump_already_processing` error has been removed since dumps can now be enqueued.
 
 Done by @MarinPostma in #2410
 
